KinD/study/agnhost/agnhost-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agnfoo
spec:
  selector:
    matchLabels:
      app: agnfoo
  replicas: 3
  template:
    metadata:
      labels:
        app: agnfoo
    spec:
      containers:
      - name: agnfoo
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        command:
        - /agnhost
        - netexec
        - --http-port
        - "8080"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agnbar
spec:
  selector:
    matchLabels:
      app: agnbar
  replicas: 3
  template:
    metadata:
      labels:
        app: agnbar
    spec:
      containers:
      - name: agnbar
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        command:
        - /agnhost
        - netexec
        - --http-port
        - "8080"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
