KinD/study/agnhost/agnhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agn-ingress
  labels:
    name: agn-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # ingressClassName: nginx
  rules:
  - host: agnfoo.0a0f122c.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: agnfoo-svc
            port: 
              number: 8080
